# DiagNet

./: .gitignore  README.md  compose.yml  db.sqlite3  flake.nix  justfile  manage.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: check-code.yml  container.yml  nix-ci.yml  nix.yml  test-code.yml
.helix/: languages.toml
.zed/: settings.json
accounts/: apps.py  forms.py  middleware.py  models.py  signals.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
backend/: CanReach.py  CannotReach.py  DependencyException.py  DependencyNotFound.py  ParameterMissingException.py  SetupException.py  TearDownException.py  Test.py  UnknownParameterException.py  UserExists.py  testbed.yaml
dashboard/: tests.py  urls.py  views.py
devices/: forms.py  models.py  tests.py  urls.py  views.py
devices/migrations/: 0001_initial.py  0002_device_port_alter_device_device_type.py  0003_remove_device_id_device_protocol_and_more.py  0004_device_no_telnet_on_iosxe.py  0004_device_status_device_no_telnet_on_iosxe.py  0005_remove_device_status.py  0006_device_id_alter_device_name.py  0007_device_enable_password.py  (+6 more)
diagnet/: asgi.py  settings.py  urls.py  wsgi.py
dn_site/: asgi.py  settings.py  urls.py  wsgi.py
docs/: configuration.md  faq.md
networktests/: admin.py  apps.py  forms.py  models.py  pdf_report.py  test.py  tests.py  urls.py  utils.py  views.py
nix/: checks.nix  diagnet.nix  shell.nix  treefmt.nix
scripts/: setup_real_devices.py
static/css/: styles.css  (+2 more)
templates/: base.html  polarity-switcher.html  popup.html  theme-switcher.html
testgroups/: apps.py  models.py  tests.py  urls.py  views.py
tests/: test_Test.py
(+191 files in other folders)
