[project]
name = "DiagNet"
version = "0.0.1"
description = "Test Driven Networking"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "django-stubs>=5.2.1",
    "pyats[full]>=25.6",
]

[tool.basedpyright]
typeCheckingMode = "standard"

[dependency-groups]
dev = [
    "basedpyright>=1.31.2",
    "django-template-lsp>=1.2.0",
    "ruff>=0.12.9",
]
