[project]
name = "DiagNet"
version = "0.0.1"
description = "Test Driven Networking"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "cryptography>=46.0.3",
    "daphne>=4.2.1",
    "django>=5.2.4",
    "django-stubs>=5.2.1",
    "pyats[full]>=25.6",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.9",
    "whitenoise>=6.11.0",
]

[tool.setuptools]
packages = ["diagnet", "dashboard", "devices", "networktests", "testgroups"]

[tool.basedpyright]
typeCheckingMode = "standard"

[dependency-groups]
dev = [
    "django-template-lsp>=1.2.0",
    "ruff>=0.12.9",
    "ty>=0.0.13",
]
